chore: improve commit hooks and workflow identity
- Add commit-msg hook to strip email lines from commit messages
- Remove trailing empty lines from commit messages
- Configure git identity in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,11 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Configure Git identity
+        run: |
+          git config user.name "chasset"
+          git config user.email "chasset@users.noreply.github.com"
+
       - name: Create SvelteKit env files
         run: |
           for app in packages/amarre packages/ecrin packages/find-an-expert; do
