--- a/lefthook.yml
+++ b/lefthook.yml
@@ -3,7 +3,18 @@
 
 commit-msg:
   commands:
+    strip-email-line:
+      priority: 1
+      run: |
+        # Supprime la dernière ligne si elle contient un email
+        if tail -1 {1} | grep -qE '[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}'; then
+          head -n -1 {1} > {1}.tmp && mv {1}.tmp {1}
+        fi
+        # Supprime les lignes vides à la fin
+        sed -i '' -e :a -e '/^\n*$/{$d;N;ba' -e '}' {1}
+
     commitlint:
+      priority: 2
       run: pnpm commitlint --edit {1}
 
 pre-commit:
