--- a/package.json
+++ b/package.json
@@ -98,9 +98,6 @@
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.2",
-    "chart.js": "^4.5.0",
-    "simple-git": "^3.27.0",
-    "vue-chartjs": "^5.3.2",
     "@changesets/cli": "^2.29.8",
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
@@ -108,10 +105,13 @@
     "@size-limit/file": "^12.0.0",
     "@univ-lehavre/atlas-shared-config": "workspace:*",
     "@vitest/coverage-v8": "^4.0.18",
+    "chart.js": "^4.5.0",
     "jscpd": "^4.0.7",
     "knip": "^5.82.1",
     "lefthook": "^2.0.16",
     "license-checker": "^25.0.1",
+    "mermaid": "^11.12.2",
+    "simple-git": "^3.27.0",
     "size-limit": "^12.0.0",
     "taze": "^19.9.2",
     "tsx": "^4.21.0",
@@ -120,7 +120,9 @@
     "typedoc-plugin-markdown": "^4.9.0",
     "vitepress": "^1.6.4",
     "vitepress-openapi": "^0.1.13",
-    "vitest": "^4.0.18"
+    "vitepress-plugin-mermaid": "^2.0.17",
+    "vitest": "^4.0.18",
+    "vue-chartjs": "^5.3.2"
   },
   "packageManager": "pnpm@10.28.2"
 }
