--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "hideBreadcrumbs": true
   },
   "devDependencies": {
+    "@braintree/sanitize-url": "^7.1.1",
     "@changesets/changelog-github": "^0.5.2",
     "@changesets/cli": "^2.29.8",
     "@commitlint/cli": "^20.3.1",
