fix(docs): add mermaid dependencies and simplify homepage
- Install mermaid peer dependencies (dayjs, debug, cytoscape, cytoscape-cose-bilkent)
- Remove custom vite config (plugin handles it automatically)
- Simplify RepoDynamics component: remove title and description
- Promote "État des packages" to h2 heading

--- a/package.json
+++ b/package.json
@@ -107,6 +107,10 @@
     "@univ-lehavre/atlas-shared-config": "workspace:*",
     "@vitest/coverage-v8": "^4.0.18",
     "chart.js": "^4.5.0",
+    "cytoscape": "^3.33.1",
+    "cytoscape-cose-bilkent": "^4.1.0",
+    "dayjs": "^1.11.19",
+    "debug": "^4.4.3",
     "jscpd": "^4.0.7",
     "knip": "^5.82.1",
     "lefthook": "^2.0.16",
