--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "audit:versions": "taze -r --ignore-paths packages/redcap-openapi/upstream",
     "ci:audit": "pnpm audit:security && pnpm audit:licenses && pnpm audit:unused && pnpm audit:duplicates && pnpm audit:size && pnpm audit:versions",
     "stats:generate": "tsx scripts/generate-repo-stats.ts",
+    "api:sidebar": "tsx scripts/generate-api-sidebar.ts",
     "docs:dev": "vitepress dev docs",
-    "docs:build": "pnpm stats:generate && vitepress build docs",
+    "docs:build": "pnpm api:sidebar && pnpm stats:generate && vitepress build docs",
     "docs:preview": "vitepress preview docs",
     "docs:api": "typedoc",
     "changeset:add": "changeset",
