--- a/package.json
+++ b/package.json
@@ -130,5 +130,10 @@
     "vitest": "^4.0.18",
     "vue-chartjs": "^5.3.2"
   },
-  "packageManager": "pnpm@10.28.2"
+  "packageManager": "pnpm@10.28.2",
+  "pnpm": {
+    "overrides": {
+      "fast-xml-parser": ">=5.3.4"
+    }
+  }
 }
